--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 <body>
 
-  <!-- <div class="container"> -->
+  <div class="container">
     <div class="card">
+      <!-- <img class="img-mob"src="images/image-header-mobile.jpg" alt=""> -->
       <div class="card-info">
         <h1>Get <span>insights</span> that help your business grow.</h1>
     
@@ -33,7 +34,7 @@
         <!-- <div class="tint"></div> -->
       </div>
     </div>
-  <!-- </div> -->
+  </div>
 
 
 
