--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="container">
     <div class="card">
-      <!-- <img class="img-mob"src="images/image-header-mobile.jpg" alt=""> -->
+      <img class="img-mob"src="images/image-header-mobile.jpg" alt="">
       <div class="card-info">
         <h1>Get <span>insights</span> that help your business grow.</h1>
     
